--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -23,7 +23,7 @@
 		<a href="/api">Barbs API Usage</a>
 		<a href="#Setting">Setting</a>
 		<div class="sidenav-subsection">
-			<a href="#God Alignments">God Alignments</a>
+			<a href="#Gods">Gods</a>
 		</div>
 		<a href="#Design Goals">Design Goals</a>
 		<a href="#System Basics">System Basics</a>
@@ -112,8 +112,65 @@
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;Lemuria today consists of a large number of large islands. Each of these islands contains various city-states, each with their own governments. Tying these cities together is a vast network of trade and travel. Each city boasts its own unique aspects: some examples include Silverflask (home to the Silver Tower, an all female group of mages), Hearthfire (a small town in the mountains guarded by an ancient silver dragon), Bastion (a large city built into the remains of a massive skeletal turtle), and Nighthelm (a city that never sees daylight).</p>
 			<br>
 
-			<a id="God Alignments"><h3>God Alignments</h3></a>
+			<a id="Gods"><h3>Gods</h3></a>
 			<br>
+
+			<b>Nox</b>
+			<ul>
+				<li>Alignment - LG</li>
+				<li>Domain - Battle, Heroism, Loyalty, Honor, Freedom, Chivalry, War</li>
+				<li>Patroned Races - Aasimar, Beastkin, Dwarf</li>
+				<li>Ascended from Noxycs</li>
+			</ul><br>
+
+			<b>Aloys</b>
+			<ul>
+				<li>Alignment - CG</li>
+				<li>Domain - Charity, Time, Travel, Nature</li>
+				<li>Patroned Races - Elf, Kajeem, Shifter</li>
+				<li>Ascended from Aloysius Knight</li>
+			</ul><br>
+
+			<b>Kefanas</b>
+			<ul>
+				<li>Alignment - LN</li>
+				<li>Domain - Trade, Assassins, Politics, Family, the Common Man</li>
+				<li>Patroned Races - Manti, Overmind, Zoltron</li>
+				<li>Ascended from Porkwaffles and Sylvanas</li>
+			</ul><br>
+
+			<b>Davas</b>
+			<ul>
+				<li>Alignment - TN</li>
+				<li>Domain - Magic, Technology, Education, Genesis</li>
+				<li>Patroned Races - Human, Chrom</li>
+				<li>Ascended from Dakvas</li>
+			</ul><br>
+
+			<b>Phaxet</b>
+			<ul>
+				<li>Alignment - CN</li>
+				<li>Domain - Love, Sex, Motherhood, Music, Entertainment, Art</li>
+				<li>Patroned Races - Shade, Merfolk, Arrist</li>
+				<li>Ascended from Phaxnsette Dek</li>
+			</ul><br>
+
+			<b>Adol</b>
+			<ul>
+				<li>Alignment - LE</li>
+				<li>Domain - Death, Darkness, Decay, Age, Wealth, the Afterlife</li>
+				<li>Patroned Races - Vampire, Manalith, Dryad</li>
+				<li>Ascended from Adolamin Warg</li>
+			</ul><br>
+
+			<b>Dren</b>
+			<ul>
+				<li>Alignment - CE</li>
+				<li>Domain - Murder, Evil, Blood, Ritualism, War, Chaos</li>
+				<li>Patroned Races - Demonspawn, Cyclops, Djinn</li>
+				<li>Ascended from Drenieon</li>
+			</ul><br>
+
 			<div>
 				<div class="img-container-l2">
 					<img src="https://i.imgur.com/MgugT0Y.jpg" alt="gods">
