--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -119,7 +119,7 @@
             <p>Note the semicolon. A character’s first name is sufficient. The effect name is usually the name of the ability that generated the effect. The API will send a message if it found and removed the effect.</p><br>
 
             <a id="Crit Rolls"><h3>Crit Rolls</h3></a>
-            <p>Crit rolls appear a little oddly. A negative crit roll is failure. Zero and above is a success. If a crit roll is a success, the entire crit roll section in chat will be outlined in green. If you hover over the crit roll, the calculation is "what you rolled" minus "the threshold you needed to meet for this to be a crit". The crit threshold is adjusted based on your attributes, items, and abilities’ effects. If you crit, your crit damage modifier is factored into the roll's damage automatically.</p>
+            <p>Crit rolls appear a little oddly. A negative crit roll is failure. Zero and above is a success. If a crit roll is a success, the entire crit roll section in chat will be outlined in green. If you hover over the crit roll, the calculation is "what you rolled" minus "the threshold you needed to meet for this to be a crit". The crit threshold is adjusted based on your attributes, items, and abilities’ effects. If you crit, your crit damage modifier is factored into the roll's damage automatically.</p><br>
 
             <a id="Effectiveness"><h3>Effectiveness</h3></a>
             <p>Barbs has concepts called "buff effectiveness" and "enchant effectiveness". These improve the strength of a buff or enchantment. For example, if you have 50% buff efficiency, a buff that normally grants 60% increased damage should instead grant 90% increased damage.</p>
@@ -179,7 +179,7 @@
 
             </ul>
 
-            <div class="row-full"></div>
+            <div class="row-full"></div><br>
 
             {classes}
         </article>
