Fix cooking section, start a calendar

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -24,6 +24,7 @@
 		<a href="#Setting">Setting</a>
 		<div class="sidenav-subsection">
 			<a href="#Gods">Gods</a>
+			<a href="#Calendar">Calendar</a>
 		</div>
 		<a href="#Design Goals">Design Goals</a>
 		<a href="#System Basics">System Basics</a>
@@ -176,6 +177,251 @@
 					<img src="https://i.imgur.com/MgugT0Y.jpg" alt="gods">
 				</div>
 			</div>
+
+
+			<a id="Calendar"><h3>Calendar</h3></a>
+			<br>
+
+			<table class="padded">
+				<tr>
+					<th colspan="25">Lemurian Calendar - Year 2018 AS</th>
+				</tr>
+				<tr>
+					<th colspan="25">&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th colspan="7">Icemoon (Winter)</th>
+					<th>&nbsp;</th>
+					<th colspan="7">Waterfall (Spring)</th>
+					<th>&nbsp;</th>
+					<th colspan="7">Earthdust (Spring)</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>S</th>
+					<th>M</th>
+					<th>T</th>
+					<th>W</th>
+					<th>T</th>
+					<th>F</th>
+					<th>S</th>
+					<th>&nbsp;</th>
+					<th>S</th>
+					<th>M</th>
+					<th>T</th>
+					<th>W</th>
+					<th>T</th>
+					<th>F</th>
+					<th>S</th>
+					<th>&nbsp;</th>
+					<th>S</th>
+					<th>M</th>
+					<th>T</th>
+					<th>W</th>
+					<th>T</th>
+					<th>F</th>
+					<th>S</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>1</th>
+					<th>2</th>
+					<th>3</th>
+					<th>4</th>
+					<th>5</th>
+					<th>6</th>
+					<th>7</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>1</th>
+					<th>2</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>1</th>
+					<th>2</th>
+					<th>3</th>
+					<th>4</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>8</th>
+					<th>9</th>
+					<th>10</th>
+					<th>11</th>
+					<th>12</th>
+					<th>13</th>
+					<th>14</th>
+					<th>&nbsp;</th>
+					<th>3</th>
+					<th>4</th>
+					<th>5</th>
+					<th>6</th>
+					<th>7</th>
+					<th>8</th>
+					<th>9</th>
+					<th>&nbsp;</th>
+					<th>5</th>
+					<th>6</th>
+					<th>7</th>
+					<th>8</th>
+					<th>9</th>
+					<th>10</th>
+					<th>11</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>15</th>
+					<th>16</th>
+					<th>17</th>
+					<th>18</th>
+					<th>19</th>
+					<th>20</th>
+					<th>21</th>
+					<th>&nbsp;</th>
+					<th>10</th>
+					<th>11</th>
+					<th>12</th>
+					<th>13</th>
+					<th>14</th>
+					<th>15</th>
+					<th>16</th>
+					<th>&nbsp;</th>
+					<th>12</th>
+					<th>13</th>
+					<th>14</th>
+					<th>15</th>
+					<th>16</th>
+					<th>17</th>
+					<th>18</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>22</th>
+					<th>23</th>
+					<th>24</th>
+					<th>25</th>
+					<th>26</th>
+					<th>27</th>
+					<th>28</th>
+					<th>&nbsp;</th>
+					<th>17</th>
+					<th>18</th>
+					<th>19</th>
+					<th>20</th>
+					<th>21</th>
+					<th>22</th>
+					<th>23</th>
+					<th>&nbsp;</th>
+					<th>19</th>
+					<th>20</th>
+					<th>21</th>
+					<th>22</th>
+					<th>23</th>
+					<th>24</th>
+					<th>25</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>29</th>
+					<th>30</th>
+					<th>31</th>
+					<th>32</th>
+					<th>33</th>
+					<th>34</th>
+					<th>35</th>
+					<th>&nbsp;</th>
+					<th>24</th>
+					<th>25</th>
+					<th>26</th>
+					<th>27</th>
+					<th>28</th>
+					<th>29</th>
+					<th>30</th>
+					<th>&nbsp;</th>
+					<th>26</th>
+					<th>27</th>
+					<th>28</th>
+					<th>29</th>
+					<th>30</th>
+					<th>31</th>
+					<th>32</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>36</th>
+					<th>37</th>
+					<th>38</th>
+					<th>39</th>
+					<th>40</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>31</th>
+					<th>32</th>
+					<th>33</th>
+					<th>34</th>
+					<th>35</th>
+					<th>36</th>
+					<th>37</th>
+					<th>&nbsp;</th>
+					<th>33</th>
+					<th>34</th>
+					<th>35</th>
+					<th>36</th>
+					<th>37</th>
+					<th>38</th>
+					<th>39</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>38</th>
+					<th>39</th>
+					<th>40</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>40</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
+				</tr>
+				<tr>
+					<th colspan="25">&nbsp;</th>
+				</tr>
+
+			</table>
+
+
+
 		</article>
 
 		<article>
@@ -632,16 +878,10 @@
 				<tr>
 					<th>Recipe Difficulty</th>
 					<th>Regular Meal DC</th>
-					<th>Low</th>
-					<th>Quality Delicacy (1 buffs)</th>
+					<th>Low Quality Delicacy (1 buffs)</th>
 					<th>Adequate Quality Delicacy (2 buffs)</th>
 					<th>High Quality Delicacy (3 buffs)</th>
 					<th>Perfect Delicacy (4 buffs)</th>
-				</tr>
-				<tr>
-					<td>Grains</td>
-					<td>Earth</td>
-					<td>SPT, SAN, ATN, RES</td>
 				</tr>
 				<tr>
 					<td>Easy</td>
