Put the calendar in the rulebook
Dynamically generate a table for the year calendar based on what day of
the week the first day of the years on. Also serve a page per month,
with holidays filled in based on the new rulebook file. A bunch of
styles had to change to make this look decent.

Also rename index.html template to rulebook.html, since that's what it
actually is.

--- a/html/templates/ability.html
+++ b/html/templates/ability.html
@@ -1,15 +1,15 @@
-<a id="class_{clazz}_ability_{name}"><table>
-    <tr>
-        <td><i>{name}</i></td>
-        <td>{action}</td>
-        <td>Cost: {cost}</td>
-        <td>Range: {range}</td>
-        <td>Duration: {duration}</td>
+<a id="class_{clazz}_ability_{name}"><table class="bordered">
+    <tr class="center bordered">
+        <td class="center bordered"><i>{name}</i></td>
+        <td class="center bordered">{action}</td>
+        <td class="center bordered">Cost: {cost}</td>
+        <td class="center bordered">Range: {range}</td>
+        <td class="center bordered">Duration: {duration}</td>
     </tr>
-    <tr>
-        <td colspan="5" style="text-align: left">{description}</td>
+    <tr class="center bordered">
+        <td class="left bordered" colspan="5">{description}</td>
     </tr>
-    <tr>
-        <td colspan="5" style="text-align: left">Tags: {tags}</td>
+    <tr class="center bordered">
+        <td class="left bordered" colspan="5">Tags: {tags}</td>
     </tr>
 </table></a>
