--- a/html/templates/style.css
+++ b/html/templates/style.css
@@ -86,6 +86,15 @@ article p {
     margin-bottom: 8px;
 }
 
+a.green-link:link {
+    color: lightgreen;
+}
+
+a.green-link:visited {
+    color: darkgreen;
+}
+
+
 /* Image at the top */
 
 .img-container-l1 {
@@ -102,7 +111,6 @@ article p {
 img {
     width: 100%;
 }
-
 
 /* lists */
 
