--- a/html/templates/skill.html
+++ b/html/templates/skill.html
@@ -1,4 +1,4 @@
-<a id="skill_{name}"><p><b>{name}</b></p></a>
+<a id="skill_{name}"><h4>{name}</h4></a>
 <p>{description}</p>
 <p>{name} checks are affected by <a href="#attribute_{attribute}">{attribute}</a></p>
 <ul>
