More robustness for buff/enchant effectiveness

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -182,6 +182,8 @@
                 <li>Crit chance or crit damage mod granted by the buff will be increased.</li>
                 <li>Stat and skill bonuses granted by the buff will be increased.</li>
                 <li>Initiative and concentration bonuses granted by the buff will be increased.</li>
+                <li>Resistances to specific conditions granted by the buff will be increased.</li>
+                <li>Resistances to elemental magic types granted by the buff will be increased.</li>
             </ul>
         </article>
 
